[package]
name = "todo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = "0.7.8"
getrandom = { version = "0.2.3", features = ["js"] }
ic-cdk = "0.3.2"
ic-cdk-macros = "0.3.2"
rand = "0.7.3"
serde = "1.0.130"
