[package]
name = "todo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.3"
getrandom = { version = "0.2.8", features = ["custom"] }
ic-cdk = "0.6.3"
ic-cdk-macros = "0.6.3"
rand = "0.8.5"
serde = "1.0.147"
